--- a/assets/less/dokan.less
+++ b/assets/less/dokan.less
@@ -151,7 +151,13 @@
 
 // Dokan btn
 input[type="submit"].dokan-btn, a.dokan-btn, .dokan-btn {
-    padding: 9px 21px !important;
+    padding: 9px 21px;
+}
+
+body.dokan-dashboard {
+    .dokan-table td.diviader {
+        display: none;
+    }
 }
 
 /* = Dokan Widgets
@@ -852,7 +858,6 @@ input[type="submit"].dokan-btn, a.dokan-btn, .dokan-btn {
 
 .page-template-default {
     table {
-        display: block;
         max-width: 100%;
         overflow: auto;
     }
