--- a/assets/less/header.less
+++ b/assets/less/header.less
@@ -90,7 +90,6 @@
                         position: absolute;
                         font-family: "Flaticon";
                         content: '\f07a';
-                        top: -1px;
                         left: -25px;
                         font-size: 15px;
                     }
